# actuarial-agent-harness

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  VALIDATION.md  cli-spec.md  demo.sh  pyproject.toml
.claude/commands/: challenge.md  diagnose.md  report.md  review.md
.claude/skills/data-validation/: SKILL.md
.claude/skills/mack-diagnostics/: SKILL.md
.claude/skills/reserving-report/: SKILL.md
.claude/skills/sensitivity-analysis/: SKILL.md
corpus/: README.md
docs/: QUESTIONS.md  RECORDING-PLAN.md  cli-spec.md  red-team.md
engine/: base.py  chainladder_adapter.py
examples/: genins.csv  raa.csv  triangle_calendar_effect.csv  triangle_gapped.csv  triangle_incremental.csv  triangle_nonmonotone.csv
harness/: cli.py  manifest.py  runs.py  sensitivity.py  triangle_io.py  triangle_projection.py  validation.py
harness/render/: report_html.py
harness/render/templates/: report.html
runs/: README.md
scripts/: export_samples.py  make_flawed_triangles.py
scripts/carousel/: README.md  build.sh  content-pack.md  presentation.html  verify_carousel.py
scripts/record_demo/: README.md  assemble.sh  demo.tape  record_agent_session.sh  record_report.py  sync_tape_run_id.py
tests/: test_basis_declaration.py  test_diagnostics.py  test_fit.py  test_flawed_triangles.py  test_input_snapshot.py  test_mack_vs_literature.py  test_manifest.py  test_report.py  test_runs.py  test_sensitivity.py  test_tape_sync.py  test_triangle_projection.py  test_validation.py
