[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "actuarial-agent-harness"
version = "0.1.0"
description = "A production harness for AI agents operating actuarial models."
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "chainladder==0.9.2",
    "pandas==2.3.3",
    "numpy==2.4.6",
]

[project.scripts]
reserve = "harness.cli:main"

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
]

[tool.setuptools]
packages = ["harness", "harness.render", "harness.render.templates", "engine"]

[tool.setuptools.package-data]
"harness.render.templates" = ["*.html"]
